--- a/.github/workflows/typst-compile.yaml
+++ b/.github/workflows/typst-compile.yaml
@@ -8,6 +8,6 @@ jobs:
     - name: Compile Typst Files
       uses: ammar-ahmed22/compile-typst-action@v1
       with:
-        source_paths: 'src/'
-        output_paths: '.'
+        source_paths: 'src/main.typ src/testA.typ src/testB.typ'
+        output_paths: 'main.pdf testA.pdf testB.pdf'
         # fonts_path: 'fonts'
