fix font config.

--- a/.github/workflows/typst-compile.yaml
+++ b/.github/workflows/typst-compile.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Download and Extract Fonts
         run: |
           wget -P $GITHUB_WORKSPACE/fonts https://github.com/firamath/firamath/releases/download/v0.4-beta-3/firamath-otf.zip
-          unzip $GITHUB_WORKSPACE/fonts/firamath-specimen.pdf -d $GITHUB_WORKSPACE/fonts/firamath
+          unzip $GITHUB_WORKSPACE/fonts/firamath-otf.zip -d $GITHUB_WORKSPACE/fonts/firamath
           wget -P $GITHUB_WORKSPACE/fonts https://brailleinstitute.org/wp-content/uploads/atkinson-hyperlegible-font/Atkinson-Hyperlegible-Font-Print-and-Web-2020-0514.zip
           unzip $GITHUB_WORKSPACE/fonts/Atkinson-Hyperlegible-Font-Print-and-Web-2020-0514.zip -d $GITHUB_WORKSPACE/fonts/atkinsonhyperlegible
 
